roles logic added