@@ -3,12 +3,13 @@ package com.garveshtiwari.spiritual_app_backend.common.security;
 import com.garveshtiwari.spiritual_app_backend.user.entity.User;
 import com.garveshtiwari.spiritual_app_backend.user.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
+import java.util.List;
 
 @Service
 @RequiredArgsConstructor
@@ -23,14 +24,20 @@ public class CustomUserDetailsService
 
         User user = userRepository
                 .findByEmail(email)
-                .orElseThrow(() -> new UsernameNotFoundException(
-                        "User not found."
-                ));
+                .orElseThrow(
+                        () -> new UsernameNotFoundException(
+                                "User not found."
+                        )
+                );
 
         return new org.springframework.security.core.userdetails.User(
                 user.getEmail(),
                 user.getPassword(),
-                Collections.emptyList()
+                List.of(
+                        new SimpleGrantedAuthority(
+                                user.getRole().name()
+                        )
+                )
         );
     }
 }
